--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.1.2",
+    "@nestjs/axios": "^0.0.2",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
@@ -30,9 +31,12 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "@sendgrid/mail": "^7.0.0",
+    "cheerio": "^1.0.0-rc.10",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "crypto": "^1.0.1",
+    "html-to-json": "^0.6.0",
+    "html2json": "^1.0.2",
     "moment": "^2.24.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
